# agnix

./: .agnix.toml  .claude-worktree-status.json  .gitignore  .plan.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  CUsersavifetemp_cross_platform.rs  CUsersavifetest_edge_case.txt  Dockerfile  README.md  SECURITY.md  SPEC.md  action.yml  codecov.yml
.agnix/: plan.md
.claude/: settings.local.json  workflow-status.json
.github/: PULL_REQUEST_TEMPLATE.md  spec-baselines.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rule_contribution.md  tool_support_request.md
.github/workflows/: README.md  changelog.yml  ci.yml  claude-code-review.yml  claude.yml  docs-site.yml  release.yml  security.yml  spec-drift.yml  test-action.yml
crates/agnix-cli/: Cargo.toml
crates/agnix-cli/src/: json.rs  main.rs  sarif.rs  watch.rs
crates/agnix-cli/src/telemetry/: client.rs  config.rs  events.rs  mod.rs  queue.rs
crates/agnix-cli/tests/: cli_integration.rs  docs_website_parity.rs  fixture_family_cli.rs  research_docs.rs  rule_parity.rs
crates/agnix-core/: Cargo.toml
crates/agnix-core/benches/: fixtures.rs  iai_validation.rs  validation.rs
crates/agnix-core/proptest-regressions/parsers/: markdown.txt
crates/agnix-core/src/: authoring.rs  config.rs  diagnostics.rs  eval.rs  file_utils.rs  fixes.rs  fs.rs  lib.rs  regex_util.rs
crates/agnix-core/src/parsers/: frontmatter.rs  json.rs  markdown.rs  mod.rs
crates/agnix-core/src/rules/: agent.rs  agents_md.rs  claude_md.rs  copilot.rs  cross_platform.rs  cursor.rs  hooks.rs  imports.rs  mcp.rs  mod.rs  opencode.rs  plugin.rs  prompt.rs  skill.rs  xml.rs
crates/agnix-core/src/rules/hooks/: helpers.rs  mod.rs  tests.rs
crates/agnix-core/src/rules/skill/: helpers.rs  mod.rs  tests.rs
crates/agnix-core/src/schemas/: agent.rs  agents_md.rs  claude_md.rs  copilot.rs  cross_platform.rs  cursor.rs  hooks.rs  mcp.rs  mod.rs  opencode.rs  plugin.rs  prompt.rs  skill.rs
crates/agnix-lsp/: README.md
crates/agnix-lsp/src/: backend.rs  code_actions.rs  completion_provider.rs  diagnostic_mapper.rs  hover_provider.rs  lib.rs  position.rs  vscode_config.rs
crates/agnix-lsp/tests/: lsp_integration.rs
crates/agnix-mcp/: Cargo.toml
crates/agnix-mcp/src/: main.rs
crates/agnix-mcp/tests/: mcp_tests.rs
crates/agnix-rules/: build.rs  rules.json
crates/agnix-rules/src/: lib.rs
docs/: CONFIGURATION.md  EDITOR-SETUP.md  REAL-WORLD-TESTING.md  RELEASING.md
editors/jetbrains/: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
editors/neovim/: README.md
editors/neovim/doc/: agnix.txt
editors/neovim/plugin/: agnix.lua
editors/neovim/tests/: minimal_init.lua
editors/vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  esbuild.js  language-configuration.json  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
editors/vscode/src/: extension.ts  version-check.ts
editors/vscode/syntaxes/: skill-frontmatter.tmLanguage.json
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/src/: lib.rs
knowledge-base/: EVALUATION.md  INDEX.md  MONTHLY-REVIEW.md  PATTERNS-CATALOG.md  README.md  RESEARCH-TRACKING.md  VALIDATION-RULES.md  agent-config-optional-fields.md  rules.json
knowledge-base/agent-docs/: CODEX-REFERENCE.md  KNOWLEDGE-LIBRARY.md  LLM-INSTRUCTION-FOLLOWING-RELIABILITY.md  OPENCODE-REFERENCE.md  release.md  workflow.md
knowledge-base/standards/: README.md  RESEARCH-SUMMARY.md  agent-skills-HARD-RULES.md  agent-skills-OPINIONS.md  claude-code-HARD-RULES.md  claude-code-OPINIONS.md  mcp-HARD-RULES.md  mcp-OPINIONS.md  multi-platform-HARD-RULES.md  multi-platform-OPINIONS.md  prompt-engineering-HARD-RULES.md  prompt-engineering-OPINIONS.md
locales/: en.yml  es.yml  zh-CN.yml
npm/: README.md  install.js  package.json
scripts/: bench.sh  check-rule-counts.py  download.sh  generate-docs-rules.py  real-world-validate.py  run.sh  sync-versions.sh
skills/agnix/: SKILL.md
tests/: eval.yaml
tests/fixtures/: README.md
tests/fixtures/agents/: invalid-model.md  missing-name.md  tool-conflict.md  valid-agent.md
tests/fixtures/cursor-legacy/: .cursorrules
tests/fixtures/hooks/: valid-settings.json
tests/fixtures/mcp/: empty-description.json  invalid-input-schema.json  invalid-jsonrpc-version.json  missing-consent.json  missing-required-fields.json  protocol-version-mismatch.mcp.json  untrusted-annotations.json  valid-multiple-tools.json  valid-tool.json
tests/fixtures/opencode/: opencode.json
tests/fixtures/opencode-invalid/: opencode.json
tests/fixtures/plugins/: invalid-semver.json  missing-fields.json
tests/fixtures/prompt/: pe-001-critical-in-middle.md  pe-001-valid.md  pe-002-cot-on-simple.md  pe-002-valid.md  (+4 more)
tests/real-world/: repos.yaml
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js  versions.json
website/docs/: api-reference.md  contributing.md  editor-integration.md  getting-started.md  intro.md
(+94 files in other folders)
