[package]
name = "agnix-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for agnix - agent config linter"
readme = "README.md"
keywords = ["agent", "linter", "cli", "claude", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agnix"
path = "src/main.rs"

[dependencies]
agnix-core = { path = "../agnix-core", version = "0.2.0" }
agnix-rules = { path = "../agnix-rules", version = "0.2.0" }
clap.workspace = true
colored.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
similar = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
regex = "1"
