[package]
name = "agnix-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for agnix - agent config linter"
readme = "README.md"
keywords = ["agent", "linter", "cli", "claude", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agnix"
path = "src/main.rs"

[dependencies]
agnix-core.workspace = true
agnix-rules.workspace = true
clap.workspace = true
colored.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
similar = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
regex = "1"
