[package]
name = "agnix-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core validation engine for agent configurations"
readme = "README.md"
keywords = ["agent", "linter", "validation", "mcp", "skills"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
agnix-rules.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
ignore.workspace = true
glob.workspace = true
rayon.workspace = true
dirs = "5"
toml = "0.8"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "validation"
harness = false
